syntax = "proto3";

package protocols.grpc.service_info;

import "protocols/grpc/common/common.proto";

message ServiceInfoRequest {}

message ModelInfo {
  string model_id = 1;
  string version = 2;
  repeated string supported_languages = 3;
  bool support_streaming = 4;
  string description = 5;
}

message ServiceInfoResponse {
  string service_name = 1;
  string version = 2;
  repeated ModelInfo models = 3;
  protocols.grpc.common.ErrorDetail error = 4;
}

service ServiceInfoService {
  rpc GetServiceInfo(ServiceInfoRequest) returns (ServiceInfoResponse);
}
